--- a/Section1/package.json
+++ b/Section1/package.json
@@ -2,14 +2,22 @@
   "name": "Section1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "first-app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node build/first-app.js",
+    "dev": "concurrently \"tsc -w\"  \"nodemon build/first-app.js\"",
+    "dev2": "ts-node-dev src/first-app.ts",
+    "prod": "tsc && node build/first-app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.14.6"
+    "@types/concurrently": "^7.0.0",
+    "@types/node": "^14.14.6",
+    "@types/nodemon": "^1.19.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
