--- a/Section2/package.json
+++ b/Section2/package.json
@@ -4,9 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node build/first-app.js",
+    "dev": "concurrently \"tsc -w\"  \"nodemon build/first-app.js\"",
+    "dev2": "ts-node-dev src/first-app.ts",
+    "prod": "tsc && node build/first-app.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/concurrently": "^7.0.0",
+    "@types/nodemon": "^1.19.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
+  }
 }
